--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
 
 
     <main>
+        <!--jambotron-->
         <section id="jambo">
             <div class="jumbotron jumbotron-fluid">
                 <div class="container-fluid ">
@@ -162,6 +163,9 @@
             </div>
 
         </section>
+        <!--jambotron-->
+
+
 
 
 
