--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
         <!--Inizio Menu -->
         <section id="pub">
             <div class="container">
-                <div class="row row-cols-sm-1 row-cols-md-2 ">
-                    <div class="col card">
+                <div class="row row-cols-sm-1 row-cols-md-2 align-items-center ">
+                    <div class="col card border-0">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -286,9 +286,9 @@
 
 
             <div class="container h-100 position-relative">
-                <img class=" w-25 pt-5 p-4 ms-5 position-absolute top-0 start-0" src="img/it-takes-two-logo.png" alt="">
+                <img class=" w-25 pt-5 p-4 ms-1 position-absolute top-0 start-0" src="img/it-takes-two-logo.png" alt="">
 
-                <div class="jambo_text position-absolute top-50 ms-5 text-white  ">
+                <div class="jambo_text position-absolute top-50  text-white">
                     <h1 class="display-5 fw-bold">Custom jumbotron</h1>
                     <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the
                         one in previous versions of Bootstrap. </p>
@@ -384,16 +384,16 @@
 
 
         <section id="esplora-playstation">
-            <div class="container">
-                <div class="menu_PS4 m-auto text-center ">
+            <div class="container py-5">
+                <div class="menu_PS4 m-auto text-center py-5 ">
                     <h1>Ecco la PlayStation 5</h1>
                     <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam unde et temporibus
                         officiis, natus quas labore eveniet?</p>
 
                 </div>
-                <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3 row-cols-lg-3 m-auto">
-                    <div class="col justify-content-center">
-                        <div class="card" style="width: 18rem;">
+                <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3 row-cols-lg-3">
+                    <div class="col">
+                        <div class="card border-0" style="width: 18rem;">
                             <img src="img/ps4-slim-homepage-image-block.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Playstation 4</h5>
@@ -405,7 +405,7 @@
 
                     </div>
                     <div class="col">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card border-0" style="width: 18rem;">
                             <img src="img/double11-202010-tw-psvr.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Playstation 4</h5>
@@ -418,7 +418,7 @@
 
                     </div>
                     <div class="col">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card border-0" style="width: 18rem;">
                             <img src="img/dualshock-4-listing-thumb.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Playstation 4</h5>
@@ -470,7 +470,7 @@
 
         <section id="sconti" class="mt-4">
             <div class="container">
-                <div class="sconti m-auto text-center ">
+                <div class="sconti m-auto text-center py-5">
                     <h1>Nuovi sconti sul Playstation Store</h1>
                     <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam unde et temporibus
                         officiis, natus quas labore eveniet?
